[package]
name = "learning"
description = "A repository for learning and experimentation"
version = "0.0.1"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[[bin]]
name = "learning"
path = "rust/main.rs"
